--- a/css/menu.css
+++ b/css/menu.css
@@ -40,6 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all .4s ease;
 }
 
 /* Hamburger Lines - Top & Bottom */
@@ -55,6 +56,26 @@
   background-color: inherit;
 }
 
+/* Moves Line Down */
 .menu-wrap .hamburger > div::after {
   top: 10px;
+}
+
+/* Toggler */
+
+.menu-wrap .toggler:checked + .hamburger > div {
+  transform: rotate(135deg);
+}
+
+/* Turns Lines Into X */
+.menu-wrap .toggler:checked + .hamburger > div:before,
+.menu-wrap .toggler:checked + .hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+/* Rotate ON Hover When Checked */
+
+.menu-wrap .toggler:checked:hover + .hamburger > div {
+  transform: rotate(225deg);
 }
